
2009-04-14  9:49 Ali aliov@xfce.org 
	 * : Commit all changes for beta2

2009-04-13 21:49 Ali aliov@xfce.org 
	 * : Register to some posix signals+put the restart style to never when we exit the power manager

2009-04-13 21:23 Ali aliov@xfce.org 
	 * : Fix icon refreshing, it should fix bug 5221

2009-04-12 22:54 Ali aliov@xfce.org 
	 * : Provide the possibility to disable brightness control on key press by setting a xfconf property

2009-04-12 21:29 Ali aliov@xfce.org 
	 * : Enable HAL power button event even if the button is correctly mapped in X, as X doesn't always generates events for it

2009-04-12 17:09 Ali aliov@xfce.org 
	 * : Disable not mapped keys in the settings dialog

2009-04-12  2:14 Ali aliov@xfce.org 
	 * : Added debug macro for enum values+fix possible missing signal that preventing the OSD from getting displayed on brightness key press

2009-04-11 23:06 Ali aliov@xfce.org 
	 * : Implement option to put the system in sleep mode when it is inactive for a long time

2009-04-11 16:48 Ali aliov@xfce.org 
	 * : Patch for the xfpm-button-hal from Mike Massonnet

2009-04-11 14:38 Ali aliov@xfce.org 
	 * : Fix brightness buttons issue

2009-04-11 11:26 Ali aliov@xfce.org 
	 * : Fix notification timeouts when using xfce4-notifyd+minor clean up of some unused includes

2009-04-10 23:31 Ali aliov@xfce.org 
	 * : Making the settings dialog pluggable+use the shutdown interface on the xfce4-session to shutdown

2009-04-10 21:29 Ali aliov@xfce.org 
	 * : Added handler for power button+added option to ask the session manager to its show the exit dialog

2009-04-10 19:53 Ali aliov@xfce.org 
	 * : Change the session restart style to if running when we are exiting

2009-04-10 16:15 Ali aliov@xfce.org 
	 * : Fix the session restart command in the previous revision

2009-04-10 16:00 Ali aliov@xfce.org 
	 * : Connect to the session using libxfcegui4 and properly shutdown when the session dies

2009-04-10 12:24 Ali aliov@xfce.org 