@@ -1,4 +1,7 @@
 
+2009-04-14 19:19 Ali aliov@xfce.org 
+	 * : Add option to inhibit backlight sleep in the context menu+updates on the battery code
+
 2009-04-14  9:49 Ali aliov@xfce.org 
 	 * : Commit all changes for beta2
 
